Adding junit+jmock tests
Unit tests added to the interpreter